<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="abandon">"Abandon
Match"</string>
    <string name="accept">Accept</string>
    <string name="accept_resign">Accept Resign</string>
    <string name="achievements">Achievements</string>
    <string name="advanced">Advanced:</string>
    <string name="already_offered_draw">You have already made an offer this turn, and it was rejected.</string>
    <string name="also_available">Also Available…</string>
    <string name="analyse">Analyse</string>
    <string name="analyse_help">\"Analyse\" will do a much deeper search than a regular hint, and also show you the moves the game considers as it thinks.</string>
    <string name="app_name_free">Chess Free</string>
    <string name="app_name_paid">Chess</string>
    <string name="back">BACK</string>
    <string name="board_selection">Board:</string>
    <string name="cancel">Cancel</string>
    <string name="castling_body">The last move played by the CPU was called \"Castling\". Read the rules section for more on this.</string>
    <string name="castling_title">\"Castling\"</string>
    <string name="casual_body">You have selected the \"Casual\" option. In this mode you have access to move takeback, Hint, Analyse, the Tutor, White Handicaps, \"Show CPU Thinking\" and \"Show Pieces in Danger\" to help you improve your game.</string>
    <string name="casual_only">Casual Mode Only:</string>
    <string name="casual_only2">(Casual Mode Only)</string>
    <string name="check">Check!</string>
    <string name="check_mate">Check Mate!</string>
    <string name="checkbox_aids">Show Legal &amp; Last Moves</string>
    <string name="checkbox_confirm">Confirm Pro Moves</string>
    <string name="checkbox_coords">Show Coordinates</string>
    <string name="checkbox_cpu_offers">Allow CPU resign/draw</string>
    <string name="checkbox_cpu_offers_explain">When selected, the CPU player is allowed to offer to resign or draw matches.</string>
    <string name="checkbox_expanded">Expanded Move Notation</string>
    <string name="checkbox_flip">Flip PvP Board</string>
    <string name="checkbox_hidegpg">Hide \"Google Play Games\" features</string>
    <string name="checkbox_hideundo">Hide \"Undo\" Button</string>
    <string name="checkbox_infobar">Hide Status Bar</string>
    <string name="checkbox_replace_hint">Replace Hint with Analyse</string>
    <string name="checkbox_screenalwayson">Screen Always On</string>
    <string name="checkbox_sfx">Sound On</string>
    <string name="checkbox_thinking">Show CPU Thinking</string>
    <string name="checkbox_threat">Show Pieces In Danger</string>
    <string name="checkbox_timer">Always Show Timers</string>
    <string name="checkbox_transitions">Screen Transitions</string>
    <string name="chess_program"><b>OUR CHESS PROGRAM:</b>"

Our Chess program is based on our Treebeard chess engine, which you can read about on http://www.aifactory.co.uk/newsletter/2005_02_treebeard_chess.htm and that has been licensed for use by Microsoft in their products. This chess engine uses techniques not found in most chess programs, which allows it to play with a more human style. Unlike conventional programs, it does not search millions of positions but instead uses a probability directed search to examine less positions in more detail. This program shares its technology with the Japanese Chess program \"Shotest\", twice ranked 3rd in the world.

"</string>
    <string name="confirm">Confirm</string>
    <string name="continue_message">Continue…</string>
    <string name="corrupt_file">Unfortunately your game file was corrupt, so a new game has been started instead.</string>
    <string name="cpu">Your opponent</string>
    <string name="cpu_1">Cpu (1)</string>
    <string name="cpu_10">Cpu (10)</string>
    <string name="cpu_11">Cpu (11)</string>
    <string name="cpu_12">Cpu (12)</string>
    <string name="cpu_2">Cpu (2)</string>
    <string name="cpu_3">Cpu (3)</string>
    <string name="cpu_4">Cpu (4)</string>
    <string name="cpu_5">Cpu (5)</string>
    <string name="cpu_6">Cpu (6)</string>
    <string name="cpu_7">Cpu (7)</string>
    <string name="cpu_8">Cpu (8)</string>
    <string name="cpu_9">Cpu (9)</string>
    <string name="cpu_p">CPU P</string>
    <string name="cpu_short">Cpu</string>
    <string name="crosspromBackgammon">The ancient, and evergreen, game of skill, strategy and luck.</string>
    <string name="crosspromMoveit">Elegant, original and brand new type of block puzzle = one essential download!</string>
    <string name="decline">Decline</string>
    <string name="decline_resign">Play On</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you wish to delete this saved game?</string>
    <string name="difficulty">"Difficulty
(P,1→12) :"</string>
    <string name="dont_show_again">"Don't Show Again"</string>
    <string name="dontshowagain">"Don't Show Again"</string>
    <string name="download_now">Download Now!</string>
    <string name="draw">Draw!</string>
    <string name="draw_50move">(50 moves with no capture or pawn move)</string>
    <string name="draw_agreed">Draw is agreed!</string>
    <string name="draw_agreed_">Players agreed to a draw</string>
    <string name="draw_lackofpieces">(Win not possible with remaining pieces)</string>
    <string name="draw_offered">Do you want to agree to a draw?</string>
    <string name="draw_offered_p1">Player 1 would like to offer you a draw. Do you agree?</string>
    <string name="draw_offered_p2">Player 2 would like to offer you a draw. Do you agree?</string>
    <string name="draw_rejected">I would still like to play on a little further.</string>
    <string name="draw_rejected_first">I would like to play on a little further.</string>
    <string name="draw_rejected_p1">Player 1 would like to play on further.</string>
    <string name="draw_rejected_p2">Player 2 would like to play on further.</string>
    <string name="draw_repeated">(Repeated moves)</string>
    <string name="export_pgn">Export PGN…</string>
    <string name="export_pgn2">Export PGN</string>
    <string name="hint">Hint</string>
    <string name="leaving_game">"You are about to leave the match and lose all unsaved progress.

To save or export to PGN first, press cancel and go to menu."</string>
    <string name="log_as_draw">"Draw
Match"</string>
    <string name="main_menu">Main Menu</string>
    <string name="main_menu_2">Quit Match</string>
    <string name="more">More</string>
    <string name="more_games">More Games</string>
    <string name="no">No</string>
    <string name="nothanks">No Thanks</string>
    <string name="offer_draw">Offer Draw</string>
    <string name="ok">OK</string>
    <string name="play_again">Play Again</string>
    <string name="recordgame">Record Game</string>
    <string name="resign_cap">Resign</string>
    <string name="resign_match">"Resign
Match"</string>
    <string name="review_game">Review Game</string>
    <string name="rules_of_chess2">Rules Of Chess</string>
    <string name="save_and_quit">Save &amp; Quit</string>
    <string name="saveas">Save Game…</string>
    <string name="settings">Options</string>
    <string name="signin_body">"This feature needs you to be signed into Google before it'll work. When signed in, you can share your progress and achievements with your friends!"</string>
    <string name="stats">Statistics</string>
    <string name="swap_sides">Swap Sides</string>
    <string name="tutor_title">Tutor Mode</string>
    <string name="view_board">View Board</string>
    <string name="yes">Yes</string>
    <string name="base_yes_please">Yes Please!</string>
    <string name="festive_update">Festive Update!</string>
    <string name="festive_update_main">To celebrate the holidays, we have created a festive theme with falling snow! Would you like to turn it on?</string>
    <string name="festive_update_main_basic">To celebrate the holidays, we have created a festive theme with falling snow! You can turn it on in the Preferences!</string>
    <string name="level1_body">"Level 1 (ELO 750) is currently selected, from the 1 -> 12 levels available (ELO 750 ->2100).

Do you wish to continue?"</string>
    <string name="level1_title">Level 1 Selected</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="no_thanks">No Thanks</string>
    <string name="promo_message">Checkers Free, sister app of Chess Free, has been massively updated! Now with improved AI, more options, landscape mode on tablets, and more!</string>
    <string name="signin">Sign in</string>
</resources>