<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_help_holo" android:id="@id/menuitem7" android:title="@string/hint" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_analyse_holo" android:id="@id/menuitem13" android:title="@string/analyse" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_tutoron_holo" android:id="@id/menuitem25" android:title="@string/tutor_title" android:showAsAction="always" />
    <item android:icon="@drawable/ic_menu_preferences_holo" android:id="@id/menuitem999" android:title="@string/more" android:showAsAction="always">
        <menu>
            <item android:icon="@drawable/ic_menu_home_holo" android:id="@id/menuitem1" android:title="@string/main_menu_2" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_sort_by_size_holo" android:id="@id/menuitem9" android:title="@string/stats" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_preferences_holo" android:id="@id/menuitem4" android:title="@string/settings" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_info_details_holo" android:id="@id/menuitem3" android:title="@string/rules_of_chess2" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_emoticons_holo" android:id="@id/menuitem2" android:title="@string/more_games" android:showAsAction="never" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_menu_gameelements_holo" android:id="@id/menuitem999" android:title="@string/settings" android:showAsAction="always">
        <menu>
            <item android:icon="@drawable/ic_menu_block" android:id="@id/menuitem12" android:title="@string/resign_cap" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_draw" android:id="@id/menuitem22" android:title="@string/offer_draw" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_view_holo" android:id="@id/menuitem6" android:title="@string/review_game" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_view_holo" android:id="@id/menuitem24" android:title="@string/tutor_title" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_swap_holo" android:id="@id/menuitem23" android:title="@string/swap_sides" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_save_holo" android:id="@id/menuitem10" android:title="@string/saveas" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_archive_holo" android:id="@id/menuitem11" android:title="@string/export_pgn" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_close_clear_cancel_holo" android:id="@id/menuitem5" android:title="@string/save_and_quit" android:showAsAction="never" />
        </menu>
    </item>
</menu>