<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark" android:id="@id/menuitem999" android:title="@string/more" android:showAsAction="always">
        <menu>
            <item android:icon="@drawable/ic_menu_home_holo" android:id="@id/menuitem1" android:title="@string/main_menu_2" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_sort_by_size_holo" android:id="@id/menuitem9" android:title="@string/stats" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_preferences_holo" android:id="@id/menuitem4" android:title="@string/settings" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_info_details_holo" android:id="@id/menuitem3" android:title="@string/rules_of_chess2" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_emoticons_holo" android:id="@id/menuitem2" android:title="@string/more_games" android:showAsAction="never" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_menu_gameelements_holo" android:id="@id/menuitem999" android:title="@string/settings" android:showAsAction="always">
        <menu>
            <item android:icon="@drawable/ic_menu_view_holo" android:id="@id/menuitem6" android:title="@string/review_game" android:showAsAction="never" />
            <item android:icon="@drawable/ic_menu_close_clear_cancel_holo" android:id="@id/menuitem5" android:title="@string/save_and_quit" android:showAsAction="never" />
        </menu>
    </item>
</menu>