<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/RootView" android:background="@drawable/dialog_bg" android:padding="15.0dip" android:layout_width="320.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/leaving_game" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/ResignButton" android:layout_width="145.0dip" android:text="@string/resign_match" style="@style/StretchyDialogButton" />
        <Button android:id="@id/DrawButton" android:layout_width="145.0dip" android:text="@string/log_as_draw" style="@style/StretchyDialogButton" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <Button android:id="@id/AbandonButton" android:layout_width="145.0dip" android:text="@string/abandon" style="@style/StretchyDialogButton" />
        <FrameLayout android:layout_gravity="center" android:layout_width="145.0dip" android:layout_height="wrap_content">
            <Button android:layout_gravity="center" android:id="@id/CancelButton" android:text="@string/cancel" style="@style/StretchyDialogButton" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>