<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/dialog_bg" android:padding="15.0dip" android:layout_width="320.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text1" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
    <TextView android:textSize="18.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text2" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <Button android:id="@id/ReviewGame" android:layout_width="145.0dip" android:text="@string/review_game" style="@style/StretchyDialogButton" />
            <Button android:id="@id/UndoLastMove" android:layout_width="145.0dip" android:text="@string/view_board" style="@style/StretchyDialogButton" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <Button android:id="@id/PlayAgain" android:layout_width="145.0dip" android:text="@string/play_again" style="@style/StretchyDialogButton" />
            <Button android:id="@id/MainMenu" android:layout_width="145.0dip" android:text="@string/main_menu" style="@style/StretchyDialogButton" />
        </LinearLayout>
        <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text3" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/advanced" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <Button android:id="@id/SaveGame" android:layout_width="145.0dip" android:text="@string/recordgame" style="@style/StretchyDialogButton" />
            <Button android:id="@id/ExportPGN" android:layout_width="145.0dip" android:text="@string/export_pgn2" style="@style/StretchyDialogButton" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>