<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/RootView" android:background="@drawable/dialog_bg" android:padding="15.0dip" android:layout_width="260.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/level1_title" />
    <ImageView android:id="@id/level1" android:layout_width="128.0dip" android:layout_height="124.0dip" android:src="@drawable/mode_vs_level_popup" android:scaleType="fitXY" android:adjustViewBounds="true" />
    <TextView android:textSize="14.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text2" android:padding="8.0dip" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/level1_body" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:textSize="14.0dip" android:id="@id/DontShowAgainButton" android:text="@string/cancel" style="@style/StretchyDialogButton" />
        <Button android:textSize="14.0dip" android:id="@id/ContinueButton" android:text="@string/continue_message" style="@style/StretchyDialogButton" />
    </LinearLayout>
</LinearLayout>