<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/RootView" android:background="@drawable/dialog_bg" android:padding="25.0dip" android:layout_width="320.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:gravity="center" android:id="@id/Text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signin_body" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <Button android:textSize="15.0dip" android:textColor="#ff555555" android:id="@id/sign_in_button" android:background="@drawable/src_google_signin_light" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/signin" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="0.0" android:shadowRadius="0.0" />
        <Button android:textSize="14.0dip" android:id="@id/NoButton" android:layout_width="110.0dip" android:layout_height="50.0dip" android:layout_marginLeft="5.0dip" android:text="@string/nothanks" />
    </LinearLayout>
</LinearLayout>