<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center" android:layout_gravity="center" android:id="@id/RootView" android:background="@drawable/dialog_bg" android:clickable="true" android:layout_width="320.0dip" android:layout_height="320.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="15.0dip">
        <ImageView android:layout_gravity="center" android:id="@id/icon" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/checkers" android:scaleType="fitXY" android:adjustViewBounds="true" />
        <FrameLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="16.0dip" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/Text" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/promo_message" />
        </FrameLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="22.0dip" android:id="@id/YesButton" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/download_now" style="@style/StretchyDialogButton" />
            <Button android:textSize="22.0dip" android:id="@id/NoButton" android:layout_width="wrap_content" android:layout_height="60.0dip" android:text="@string/nothanks" style="@style/StretchyDialogButton" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>